# d3blocks

./: .gitignore  CITATION.cff  CONTRIBUTE.md  LICENSE  MANIFEST.in  README.md  chord.html  idea_blocks.txt  make_build.sh  make_clean.sh  make_sphinx_and_commit.sh  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_additional.txt  sankey.html  scatter_demo.html  setup.py  setup.py.old  sphinxcontrib_packages-1.0.1-py3-none-any.whl  test.html  test_all_examples.py  test_chord_margins.py  test_movingbubbles_daystep.py  test_movingbubbles_timer_fix.py  tree_hierarchy.html  treemap_advanced.html
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  docs.yml  pytest.yml
d3blocks/: Movingbubbles.py  __init__.py  d3blocks.py  examples.py  examples_docs.py  test.html  utils.py
d3blocks/chord/: Chord.py
d3blocks/chord_small/: Chord.py
d3blocks/circlepacking/: Circlepacking.py
d3blocks/d3js/: movingbubbles.html.j2
d3blocks/data/: movingbubbles.csv
d3blocks/elasticgraph/: __init__.py  elasticgraph.py
d3blocks/heatmap/: Heatmap.py
d3blocks/imageslider/: Imageslider.py
d3blocks/maps/: Maps.py
d3blocks/matrix/: Matrix.py
d3blocks/movingbubbles/: Movingbubbles.py
d3blocks/particles/: Particles.py
d3blocks/sankey/: Sankey.py
d3blocks/scatter/: Scatter.py
d3blocks/tests/: test_all_examples.py  test_chord_margins.py  test_d3blocks.py  test_medium_charts.py  test_movingbubbles_timedelta.py  test_movingbubbles_timedelta_fix.py
d3blocks/time/: E3C3DF485C3784B1F.css  Inconsolata.css  inpage.js  run_app.html
d3blocks/timeseries/: Timeseries.py  index.html  timeseries_demo.html
d3blocks/tree/: Tree.py
d3blocks/treemap/: Treemap.py
d3blocks/treepacking/: Treepacking.py
d3blocks/violin/: Violin.py
demo/ParticleFest/: index.html
demo/imageslider/: imageslider.html  info.txt
demo/line/: https---bl.ocks.org-mbostock-raw-34f08d5e11952a80609169b7917d4172--raw=true.url
demo/movingbubbles/: Time Use Simulation.url  movingbubbles_original_lokaal.html
demo/sankey/: sankey_demo.html
demo/scatter/: contours.html  scatter3d.html  scatter_demo.html  scatter_demo_with_colors.html.url  scatter_lokaal.html
demo/scatter_3d/: scatter_3d.html
demo/timeseries/: data_delim.tsv  style.css  timeseries_internet.html.url  (+1 more)
docs/: HOWTO.txt  Makefile  howtwo_add_carbon_ads.txt  index.html  make.bat
js/: .gitignore  package-lock.json  package.json  rollup.config.js
notebooks/: d3blocks.ipynb
pyd3/: __init__.py  examples.py  pyd3.py
(+228 files in other folders)
