[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d3blocks"
dynamic = ["version"]
authors = [{ name = "Erdogan Taskesen", email = "erdogant@gmail.com" },]
description = "Python package d3blocks."
readme = "README.md"
requires-python = ">=3"
license = { file = "LICENSE" }
keywords = ["Python", ""]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
]
dependencies = [
    'numpy',
    'colourmap>=1.1.10',
    'datazets>=0.1.7',
    'd3graph>=2.4.16',
    'elasticgraph>=0.1.2',
    'ismember>=1.0.1',
    'pandas',
    'tqdm',
    'requests',
    'scikit-learn',
    'jinja2',
]

[project.urls]
Homepage = "https://erdogant.github.io/d3blocks"
Download = "https://github.com/erdogant/d3blocks/archive/{version}.tar.gz"

[tool.setuptools]
packages = ["d3blocks"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "d3blocks.__version__" }
