[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "d3blocks"
dynamic = ["version"]
authors = [{ name = "Erdogan Taskesen", email = "erdogant@gmail.com" },]
description = "Python package d3blocks."
readme = "README.md"
requires-python = ">=3"
license = "GPL-3.0-or-later"
keywords = [
    "Python",
    "visualizations",
    "interactive",
    "javascript",
    "d3js",
    "d3blocks",
    "network",
    "graph",
    "data visualization",
    "web",
    "extendable",
    "extension",
    "plugin",
    "modular",
    "customizable"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
]
dependencies = [
    'numpy',
    'colourmap>=1.1.10',
    'datazets>=0.1.7',
    'd3graph>=2.4.16',
    'ismember>=1.0.1',
    'pandas',
    'tqdm',
    'requests',
    'jinja2',
]

[project.urls]
Homepage = "https://erdogant.github.io/d3blocks"
Download = "https://github.com/erdogant/d3blocks/archive/{version}.tar.gz"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["d3blocks*"]

[tool.setuptools.dynamic]
version = { attr = "d3blocks.__version__" }
